# sautiris

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  REVIEW_AND_ROADMAP.md  SECURITY.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: apisec-scan.yml  checkmarx.yml  ci.yml  publish.yml  release.yml  security.yml  semgrep.yml  veracode.yml
docs/: DICOM_CONFORMANCE_STATEMENT.md  api-reference.md  configuration.md  deployment.md  dicom-setup.md  fhir-interop.md  getting-started.md  integration-guide.md
src/sautiris/: __init__.py  __main__.py  app.py  cli.py  config.py
src/sautiris/api/: __init__.py  deps.py  router.py
src/sautiris/core/: __init__.py  accession.py  audit.py  crypto.py  events.py  permissions.py  redis_rate_limit.py  tenancy.py
src/sautiris/integrations/: __init__.py
src/sautiris/migrations/: env.py
src/sautiris/models/: __init__.py  accession.py  ai_integration.py  alert.py  analytics.py  apikey.py  audit.py  base.py  billing.py  dose.py  mpps.py  order.py  pacs.py  peer_review.py  report.py  schedule.py  worklist.py
src/sautiris/repositories/: __init__.py  alert.py  analytics.py  (+10 more)
tests/: conftest.py  factories.py
tests/test_api/: test_apikeys.py  test_audit_middleware.py  test_deps_security.py  test_error_handler.py  test_error_sanitization.py  test_health.py  test_integration.py  test_rate_limiting.py
tests/test_core/: test_accession.py  test_app.py  test_audit.py  test_cli.py  test_crypto.py  test_events.py  test_key_rotation.py  test_permissions.py  test_redis_rate_limit.py  test_tenancy.py  test_tenancy_middleware.py
tests/test_dicom/: test_mpps_scp.py  test_mwl_scp.py  test_scp_security_wiring.py  test_security.py  test_store_scp.py
tests/test_integrations/: test_ai_base.py  test_ai_hooks.py  test_dcm4chee_stub.py  test_fhir_client.py  test_fhir_resources.py  test_fhir_server.py  test_hl7v2_builder.py  test_hl7v2_parser.py  test_ohif_viewer.py  test_orthanc_adapter.py
tests/test_migrations/: test_ris004.py  test_ris005.py
tests/test_performance/: test_accession_perf.py  test_audit_perf.py  test_auth_perf.py  test_crypto_perf.py  test_db_perf.py  test_event_bus_perf.py  test_rate_limit_perf.py
tests/test_repositories/: test_base_repository.py
tests/test_services/: test_alert_service.py  test_analytics_service.py  test_billing_service.py  test_dose_service.py  test_order_service.py  test_peer_review_service.py  test_report_service.py  test_schedule_service.py  test_worklist_service.py
(+70 files in other folders)
