[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sautiris"
version = "1.0.0"
description = "Open-source Radiology Information System (RIS) — order management, DICOM MWL, structured reporting, FHIR R4, HL7v2"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "iWorldAfric", email = "dev@iworldafric.com" }
]
keywords = ["radiology", "ris", "dicom", "fhir", "hl7", "pacs", "healthcare", "medical-imaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "pynetdicom>=2.1.0",
    "fhir.resources>=7.0.0",
    "hl7apy>=1.3.0",
    "click>=8.1.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/iWorld-Afric/sautiris"
Documentation = "https://github.com/iWorld-Afric/sautiris/tree/main/docs"
Repository = "https://github.com/iWorld-Afric/sautiris"
Issues = "https://github.com/iWorld-Afric/sautiris/issues"
Changelog = "https://github.com/iWorld-Afric/sautiris/blob/main/CHANGELOG.md"

[project.scripts]
sautiris = "sautiris.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sautiris"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B008", "UP046"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "performance: marks tests as performance/latency tests (run with -m performance)",
]
